samples/_failures_safe/1761338970_9200af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4157e5d.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
